--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,14 +2,15 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/registration_db
     username: root
-    password: 12345678
+    password: ${DB_PASSWORD:12345678}
 
   jpa:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
-        ddl-auto: update
         show_sql: true
+    hibernate:
+      ddl-auto: create-drop
 
 server:
   port: 8084
