--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
         dialect: org.hibernate.dialect.MySQLDialect
         show_sql: true
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: none
 
 server:
   port: 8084
