--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,9 +10,12 @@ spring:
         dialect: org.hibernate.dialect.MySQLDialect
         show_sql: true
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
 
 server:
   port: 8084
-
+  servlet:
+    encoding:
+      charset: UTF-8
+      force-response: true
 
