--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/registration_db1
+    url: jdbc:mysql://localhost:3306/registration_db
     username: root
     password: ${DB_PASSWORD:12345678}
   sql:
